<resources>
    <string name="app_name">Toda Phone</string>
    <string name="service_name">Toda Phone</string>
    <string name="addressbook_label">Linphone</string>
    <string name="notification_title">Linphone</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s registered</string>
    <string name="notification_register_failure">%s mất kết nối</string>
    <string name="tunnel_host"></string>
    <string name="about_version">Linphone Android %s</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_text">GNU General Public License V2\n © 2010-2017 Belledonne Communications</string>
    <string name="about_link">www.linphone.org</string>
    <string name="sync_account_name">linphone contacts</string>
    <string name="message_noti_title"> New message </string>
    <string name="message_noti_content">%s Unread message. Press to read !</string>
    <string name="adminstrator_error"> Cannot connect to server </string>
    <string name="network_error"> Cannot connect to server</string>
    <string name="occured_error">There was an error !</string>
    <string name="nontoda_contacts_title"> Contact list </string>
    <string name="pick_all_cbx">select all</string>
    <string name="all_ext_fillter">All</string>
    <string name="local_contacts">Local</string>
    <string name="privated_contacts">Internal</string>
    <string name="search_hint_text">Typing to search</string>
    <string name="new_message_title"> New message</string>
    <string name="new_message_to_hint">To</string>
    <string name="new_message_title_hint">Subject</string>
    <string name="new_message_content_hint">Content</string>
    <string name="new_message_attach_files">choose file</string>
    <string name="no_result_search">No result</string>
    <string name="all_calls">All</string>
    <string name="missed_calls">Missed call</string>
    <string name="message_list_title">Messages list</string>
    <string name="change_password">Change password</string>
    <string name="no_message">No message</string>
    <string name="log_out">Log out</string>
    <string name="version">Version: 1.3.1.0</string>
    <string name="add_contacts_successfull">Adding contact successfully</string>
    <string name="no_contacts_picked">No chosen contact</string>
    <string name="dialog_add_message">Adding…</string>
    <string name="et_user_login_hint">User name</string>
    <string name="et_password_login_hint">Password</string>
    <string name="et_idct_login_hint">Company ID</string>
    <string name="remember_login_cbx">Remember login</string>
    <string name="login_button">Login</string>
    <string name="config_dialog_title">Type address:</string>
    <string name="dialog_login_message"> Login… </string>
    <string name="empty_info_login">Login information must not be empty</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message_builder">Are you sure to logout?</string>
    <string name="confirm_dialog">OK</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="no_contacts_match">Contact does not exist in internal list</string>
    <string name="require_title_mesasage">Please type subject</string>
    <string name="require_content_mesasage"> Please type content </string>
    <string name="unavailable_file">Files do not exist or have been deleted</string>
    <string name="sending_message_dialog">sending…</string>
    <string name="send_message_successfull">sending message successfully</string>
    <string name="removing_message_dialog">Deleting...</string>
    <string name="loading_message_dialog">Loading...</string>
    <string name="no_message_picked">No message chosen</string>
    <string name="old_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="changing_pass_message">Changing password… </string>
    <string name="verify_password_hint">Confirmed password</string>
    <string name="change_password_successfull">Changing password successfully, you will be logged out</string>
    <string name="wrong_old_password">Current password incorrect, please type again </string>
    <string name="wrong_verify_password">Confirmed password incorrect, please type again </string>
    <string name="require_info">Content must not be empty</string>
    <string name="atleast_8char_password">Password must contain at least 8 letters </string>
    <string name="no_space_in_password">Password must not be blanked</string>
    <string name="offline_ext_message">cannot connect to server</string>
    <string name="good_network">good</string>
    <string name="weak_network">bad</string>
    <string name="very_good_network">perfect</string>
    <string name="normal_network">medium</string>
    <string name="receiving_call">Incoming call...</string>
    <string name="calling">Calling...</string>
    <string name="micro">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="transfer">Call transferring…</string>
    <string name="hold">Hold</string>
    <string name="dialpad">Dialpad</string>
    <string name="no_call_history">No call history</string>
    <string name="no_missed_call_history">No missed call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="missed_calls_notif_title">Missed call</string>
    <string name="missed_calls_notif_body">%i missed call</string>
    <string name="incall_notif_active">Calling…</string>
    <string name="incall_notif_paused">Hold</string>
    <string name="error_network_unreachable"> Does not connect to server</string>
    <string name="error_call_declined">End</string>
    <string name="error_user_busy">Busy</string>
    <string name="language_setting">EngLish</string>
    <string name="EngLish">EngLish</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="Language">Language</string>
    <string name="Codec">Codec</string>
    <string name="imcomingcall_status">Cuộc gọi đến</string>
    <string name="outgoingcall_status">Cuộc gọi đi</string>
    <string name="busycall_status">Máy bận</string>
    <string name="offlinecall_status">Offline</string>
    <string name="missedcall_status">Cuộc gọi nhỡ</string>
    <string name="minutes">phút</string>
    <string name="second">giây</string>
    <string name="hide">hide</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">Ngoại tuyến</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number ?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of Linphone account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use Linphone account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Linphone account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your Linphone account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\r\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="menu_send_log">Send log</string>
    <string name="menu_reset_log">Reset log</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_edit_list">Edit List</string>
    <string name="content_description_add_contact">Add to contacts</string>
    <string name="content_description_call">Call</string>
    <string name="content_description_chat">Chat</string>
    <string name="content_description_dialer_back">Return to dialer</string>
    <string name="content_description_contact_picture">Contact picture</string>
    <string name="content_description_contacts">Contacts button</string>
</resources>