<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/colorH"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout
		android:id="@+id/top_bar"
		android:layout_width="match_parent"
		android:layout_height="60dp"
        android:background="@drawable/bg_old"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/back"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:contentDescription="@string/content_description_back"
			android:padding="18dp"
			android:src="@drawable/backicon" />

		<TextView
			android:gravity="center_vertical"
			android:paddingLeft="8dp"
			android:id="@+id/tv_title"
			android:textColor="@color/white"
			android:textSize="18sp"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.8" />

		<ImageView
			android:id="@+id/add_contact"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:background="@drawable/toolbar_button"
			android:contentDescription="@string/content_description_add_contact"
			android:padding="15dp"
			android:src="@drawable/contact_add"
			android:visibility="gone" />

		<ImageView
			android:id="@+id/goto_contact"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:background="@drawable/toolbar_button"
			android:contentDescription="@string/content_description_contacts"
			android:padding="15dp"
			android:src="@drawable/contact"
			android:visibility="gone" />
	</LinearLayout>

	<ListView
		android:id="@+id/lv_history_detail"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingBottom="8dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	</ListView>
	<ScrollView
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="20dp"
			android:orientation="vertical">

			<RelativeLayout
				android:id="@+id/avatar_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center">

				<ImageView
					android:id="@+id/contact_picture"
					android:src="@drawable/avatar"
					android:contentDescription="@string/content_description_contact_picture"
					android:layout_width="100dp"
					android:layout_height="100dp"/>

				<ImageView
					android:id="@+id/mask"
					android:src="@drawable/avatar_mask"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:layout_alignParentTop="true"
					android:layout_alignLeft="@+id/contact_picture"
					android:layout_alignStart="@+id/contact_picture" />

			</RelativeLayout>

			<TextView
				android:id="@+id/contact_name"
				style="@style/font5"
				android:gravity="center_horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<TextView
				android:id="@+id/contact_address"
				style="@style/font2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">

				<ImageView
					android:id="@+id/call"
					android:visibility="gone"
					android:src="@drawable/call_start_body_default"
					android:contentDescription="@string/content_description_call"
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:layout_margin="10dp"/>

				<ImageView
					android:visibility="gone"
					android:id="@+id/chat"
					android:src="@drawable/chat_start_body_default"
					android:contentDescription="@string/content_description_chat"
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:layout_margin="10dp"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/log_row"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<View
					android:background="@color/colorE"
					android:layout_width="wrap_content"
					android:layout_height="1dp"/>

				<TextView
					android:id="@+id/status_call"
					android:textSize="15sp"
					android:textAllCaps="true"
					android:layout_marginTop="2dp"
					android:layout_gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
                    android:orientation="vertical"
					android:gravity="center"
					android:padding="10dp">

					<ImageView
						android:id="@+id/direction"
						android:paddingLeft="10dp"
						android:paddingRight="10dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

					<TextView
						android:id="@+id/date"
						style="@style/font10"
						android:paddingRight="10dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

					<TextView
						android:id="@+id/time"
						style="@style/font10"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

	</ScrollView>
</LinearLayout>