<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_old"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/top_bar"
        android:orientation="horizontal"
        android:background="@color/colorF"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>

        <TextView
            android:id="@+id/menu_name"
            android:text="@string/about"
            style="@style/font1"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:padding="15dp"/>

        <ImageView
            android:id="@+id/cancel"
            android:src="@drawable/dialer_back"
            android:background="@drawable/toolbar_button"
            android:contentDescription="@string/content_description_dialer_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:padding="15dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/llabout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="6">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logolachong" />

        <TextView
            android:layout_below="@+id/logo"
            android:id="@+id/tv_tenlienhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:text="Mọi thông tin chi tiết xin vui lòng liên hệ:"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_tenlienhe"
            android:id="@+id/tv_tenlienhe2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_diachi"
            android:layout_below="@+id/tv_tenlienhe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VPGD: Tầng 2, Tòa nhà Ngôi Sao, B15 Khu ĐTM Đại Kim, đường Nguyễn Cảnh Dị, phường Đại Kim, quận Hoàng Mai, Hà Nội"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_diachi"
            android:id="@+id/tv_dienthoai1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_dienthoai1"
            android:id="@+id/tv_dienthoai2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_dienthoai2"
            android:id="@+id/tv_hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_hotline"
            android:id="@+id/tv_cskh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_cskh"
            android:id="@+id/tv_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_website"
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Phiên bản : 1.3.0.0 "
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="normal" />

    <LinearLayout
        android:background="@color/colorC"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:src="@drawable/splashscreen"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/app_name"
            style="@style/font22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/app_description"
            style="@style/font2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/about_android_version"
            android:text="@string/about_version"
            style="@style/font12"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/about_liblinphone_version"
            android:text="@string/about_liblinphone_version"
            style="@style/font12"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:background="@color/colorH"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/about_link"
            android:text="@string/about_link"
            android:autoLink="web"
            style="@style/font2"
            android:textColorLink="@color/colorA"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/about_text"
            android:text="@string/about_text"
            style="@style/font23"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/colorE"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            style="android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/send_log"
                style="android:attr/buttonBarButtonStyleStyle"
                android:background="@drawable/button_background"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_send_log"/>

            <Button
                android:id="@+id/reset_log"
                style="android:attr/buttonBarButtonStyleStyle"
                android:background="@drawable/button_background"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_reset_log"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
