<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:background="@drawable/bg_old"

	android:orientation="vertical" >

	<LinearLayout
		android:id="@+id/top_bar"
		android:orientation="horizontal"
		android:layout_width="match_parent"
        android:layout_height="50dp">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2">

            <TextView
                android:gravity="center"
				android:id="@+id/all_calls"
                android:text="Tất cả"
                android:textColor="@color/white"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>

			<View
				android:id="@+id/all_calls_select"
				android:background="@color/colorA"
				android:layout_width="match_parent"
				android:layout_height="5dp"
				android:layout_alignParentBottom="true"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2">

            <TextView
				android:gravity="center"
                android:id="@+id/missed_calls"
                android:text="Cuộc gọi nhỡ"
                android:textColor="@color/white"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>


            <View
				android:id="@+id/missed_calls_select"
				android:background="@color/colorA"
				android:layout_width="match_parent"
				android:layout_height="5dp"
				android:visibility="gone"
				android:layout_alignParentBottom="true"/>
		</RelativeLayout>

		<View
			android:visibility="gone"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.4"/>

		<ImageView
			android:visibility="gone"
			android:id="@+id/edit"
			android:src="@drawable/edit_list_button"
			android:background="@drawable/toolbar_button"
			android:contentDescription="@string/content_description_edit_list"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.2"
			android:padding="15dp"/>
	</LinearLayout>

	<include layout="@layout/edit_list"/>

	<ListView
		android:scrollbars="none"
		android:id="@+id/history_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:cacheColorHint="@color/transparent"
		android:dividerHeight="1dp" />

	<TextView
		android:id="@+id/no_call_history"
		android:text="@string/no_call_history"
		style="@style/font6"
		android:visibility="gone"
		android:textColor="@color/white"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"/>

	<TextView
		android:textColor="@color/white"
		android:id="@+id/no_missed_call_history"
		android:text="@string/no_missed_call_history"
		style="@style/font6"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"/>

</LinearLayout>
